# Template-Searcher

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  build.rb  build.rs  config.ini  template_searcher.ahk
reader/: reader.py
src/: config.ini  config.rs  display.html  display.rb  display.rs  go.mod  helper.ahk  main.cpp  main.rb  main.rs  matcher.rs  resource.rc  resources.rc  searcher.rs  tray.rs  window.c  window.rs
